Test for ReadL3Grids; TestL3ProductMaker for getting a defined test product in memory; JavaDoc